--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SimpleChat" parent="Theme.MaterialComponents.Light">
+    <style name="Theme.SimpleChat" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">#FEFEFE</item>
+        <item name="colorOnPrimary">@color/colorPrimaryText</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#FEFEFE</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorOnSecondary">@color/colorSecondaryText</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/colorPrimary</item>
-        <!-- Customize your theme here. -->
+
+        <item name="toolbarColor">@color/colorPrimary</item>
+        <item name="cardColor">@color/colorPrimary</item>
+        <item name="buttonColor">@color/colorPrimary</item>
+        <item name="onTextColor">@color/white</item>
+        <item name="textOnPrimaryColor">@color/colorPrimaryText</item>
+
     </style>
+
 </resources>
